# dp-data-pipelines

./: .gitignore  Makefile  Pipfile  README.md  builder.yml  data.csv  logs.txt  manifest.md  metadata.json  myscript.py  pipeline-dataset-ingress-v1.yml  pyproject.toml  requirements.md  s3_tar_received.yml  testing.py
.github/: workflows.yaml
.github/workflows/: code_quality.yaml  feature.yaml  pytest.yaml  tests_and_quality.yaml
builder/: Dockerfile
docs/: pipeline-config.md
dpypelines/: README.md  s3_tar_received.md  s3_tar_received.py
dpypelines/pipeline/: README.md  config_utils.py  configuration.py  csvcubed_ingress_v1.py  dataset_ingress_v1.md  dataset_ingress_v1.py  generic_file_ingress_v1.md  generic_file_ingress_v1.py  local_directory_store.py  utils.py
features/: data_ingress_v1.feature  dataset_ingress.feature  dataset_ingress_v1.feature  environment.py  requests.feature  temporary.feature
features/fixtures/: correct_metadata.json  correct_metadata_2_0.json  correct_metadata_2_1.json  correct_metadata_test.json  test1.json  test2.json  test3.json
features/steps/: data.py  dataset_ingress.py  requests.py  temporary.py
pipeline/: README.md  dataset_ingress_v1.py  ingress_v1.py  v1.py
pipelines/: s3_tar_received.py  s3_tar_recieved.py
pipelines/pipeline/: README.md  dataset_ingress_v1.py
schemas/: validate_manifest.json
tests/: __init__.py  conftest.py  test_SDMX.py  test_maching.py  test_message.py  test_notification.py
tests/example-sdmx/: NA_MAIN_v1.8_SDMX2.0 1.xml  T0101_Annual_2023Q4M2.xml
tests/fixtures/: configs.py
(+99 files in other folders)
