[tool.poetry]
name = "dpypelines"
version = "0.1.0"
description = "Data ingest pipelines for ONS Digital Publishing"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
include = ["dpypelines/schemas/**/*.json"]

[tool.poetry.dependencies]
python = ">=3.9.0,<3.10.0"
dpytools = { git = "https://github.com/ONSdigital/dp-python-tools.git", branch="develop" }

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
black = "^24.2.0"
isort = "^5.13.2"
ruff = "^0.3.0"
pytest-cov = "^4.1.0"
behave = "^1.2.6"
docker = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]